--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MyMusicPlayer</string>
     <string name="notification_channel_name">Music Channel</string>
     <string name="notification_channel_description">Shows the currently playing music</string>
+
+    <string name="duration_unknown">00:00</string>
+    <string name="duration_format">%d:%02d</string>
 </resources>
